[package]
name = "mctool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
fltk = { version = "^1.4", features = ["fltk-bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.109"
base64 = "0.22.0"
#async-std = "1.12.0"
reqwest = "0.12.0"
clipboard = "0.5.0"